chore: extract variables from maven compiler plugin configuration properties