@@ -13,9 +13,26 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>${project.maven.compiler.source}</maven.compiler.source>
+        <maven.compiler.target>${project.maven.compiler.source}</maven.compiler.target>
+        <project.build.sourceEncoding>${project.project.build.sourceEncoding}</project.build.sourceEncoding>
+        <project.maven.compiler.source>21</project.maven.compiler.source>
+        <project.project.build.sourceEncoding>UTF-8</project.project.build.sourceEncoding>
+        <maven-compiler-plugin.compilerArgs>--enable-preview</maven-compiler-plugin.compilerArgs>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${project.maven.compiler.source}</source>
+                    <target>${project.maven.compiler.source}</target>
+                    <compilerArgs>${maven-compiler-plugin.compilerArgs}</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
